port to 1.21.4; fix part of issue #5 (make it not crashing)